[maven-release-plugin] prepare release maven-assembly-descriptor-0.9.2

--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <groupId>com.ariht</groupId>
     <artifactId>maven-assembly-descriptor</artifactId>
     <name>maven-assembly-descriptor</name>
-    <version>0.9.1-SNAPSHOT</version>
+    <version>0.9.2</version>
     <url>https://github.com/sofdes/maven-assembly-descriptor</url>
 
     <description>
@@ -23,7 +23,7 @@
         <connection>scm:git:git@github.com:sofdes/maven-assembly-descriptor.git</connection>
         <url>scm:git:git@github.com:sofdes/maven-assembly-descriptor.git</url>
         <developerConnection>scm:git:git@github.com:sofdes/maven-assembly-descriptor.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>maven-assembly-descriptor-0.9.2</tag>
     </scm>
 
     <developers>
